# GenFlow

./: CLAUDE.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml  test.yml
airflow-ai-bridge/: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  SETUP.md  deploy_local.sh  mypy.ini  pyproject.toml  quickstart.py
airflow-ai-bridge/examples/: dag_generator.py  github_daily.py  multi_mcp.py
airflow-ai-bridge/src/airflow_ai_bridge/: __init__.py  cli.py  compat.py  decorators.py  mcp.py  pool.py  tools.py  ui.py
airflow-ai-bridge/tests/: __init__.py  conftest.py  test_mcp_integration.py
examples/: README.md  agent_communication.py  basic_workflow.py  github_automation.py
src/genflow/: __init__.py  agents.py  communication.py  workflow.py
tests/: __init__.py  conftest.py  test_agents.py  test_communication.py  test_workflow.py
