[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genflow"
version = "0.1.0"
description = "Workflow automation framework with agents"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "GenFlow Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.13",
    "apache-airflow>=2.8.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "types-setuptools",
]
airflow-ai-bridge = [
    "./airflow-ai-bridge",
]

[project.urls]
Homepage = "https://github.com/mocraimer/GenFlow"
Documentation = "https://github.com/mocraimer/GenFlow#readme"
Repository = "https://github.com/mocraimer/GenFlow"
Issues = "https://github.com/mocraimer/GenFlow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/genflow"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true