[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow-ai-bridge"
version = "0.1.0"
description = "MCP (Model Context Protocol) server integration for Astronomer's airflow-ai-sdk"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Airflow AI Bridge Contributors", email = "maintainers@example.com"}
]
keywords = ["airflow", "ai", "llm", "mcp", "model-context-protocol", "astronomer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "apache-airflow>=2.0.0",  # More flexible version
    "pydantic>=2.0",
    "pydantic-ai>=0.0.15",
    "httpx>=0.25.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
airflow-ai-sdk = [
    "airflow-ai-sdk>=0.1.0",
]

dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "pre-commit>=3.5",
    "types-requests>=2.31.0",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/astronomer/airflow-ai-bridge"
Documentation = "https://airflow-ai-bridge.readthedocs.io"
Repository = "https://github.com/astronomer/airflow-ai-bridge"
Issues = "https://github.com/astronomer/airflow-ai-bridge/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_ai_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "UP", "C90", "E", "F", "B", "PL"]
extend-ignore = ["PLR0913", "PLR2004", "E402", "B904"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"